k8s/msa-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fortinet-msa
  labels:
    name: fortinet-msa
    app: fortinet
    architecture: microservices
